Fixed schedule broken layout

--- a/src/styles/full-schedule.module.scss
+++ b/src/styles/full-schedule.module.scss
@@ -38,6 +38,7 @@
   }
 
   .filterWrapper {
+    width: 30%;
     position: relative;
     margin: 15px 0 0 30px;
 
